Fixed footer not showing on some mobile devices

--- a/src/scss/Contact.scss
+++ b/src/scss/Contact.scss
@@ -53,6 +53,7 @@ div.footer {
 	font-size: calc(16px + 1vw);
 	left: 22.5vw;
 	width: 45vw;
+	height: 5vh;
 
 	@include media(">=700px", "<=952px") {
 		left: 15vw;
